# Earthquake-Forecaster

./: .gitignore  .gitmodules  CMakeLists.txt  Earthquake_Forecaster  Makefile  QtCreatorDeployment.txt  README.md  contributors.txt  dataarray.h  datediff.h  getsys.cpp  getsys.h  individual.cpp  individual.h  main.cpp  memManager.cu  memManager.h  net.json  network.cpp  network.cu  network.h  orders.json  run.sh  test.cu  test.h  xmlstructs.h
build-quakePredictor-aws/: CMakeCache.txt  Earthquake_Forecaster  Earthquake_Forecaster.cbp  Makefile  QmakePredictor  QmakePredictor.cbp  cmake_install.cmake
build-quakePredictor-aws/dlib_build/: Makefile  cmake_install.cmake
headers/: connections.h  dataarray.h  getsys.h  kernelDefs.h  network.h  neuroFunc.h  prep.h  utilFunc.h
kernels/: const.cu  cutoffKernel.cu  evolutionKernel.cu  findChildrenKernel.cu  functions.cu  genweightsKernel.cu  getFitKernel.cu  interleaveKernel.cu  network.cu  networkKernel.cu  neuroFunctions.cu  normalizeKernel.cu  reduceKernel.cu  sortKernel.cu  transferKernel.cu  utilityFunctions.cu
src/: connections.cpp  getsys.cpp  main.cpp  network.cu  prep.cpp
