project(Earthquake_Forecaster)
cmake_minimum_required(VERSION 3.2.1)
find_package(CUDA REQUIRED)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/headers)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/kernels)
LINK_DIRECTORIES(/usr/local/cuda/lib64)
set(CUDA_SEPARABLE_COMPILATION ON)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}; "-O3 -ffast-math -Wall")
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; --compiler-options  -g -lineinfo -use_fast_math)
FILE(GLOB SOURCES "src/*")
FILE(GLOB HEADERS  "headers/*")
FILE(GLOB KERNELS "kernels/*")
CUDA_ADD_LIBRARY(neuralKernels ${KERNELS})
target_link_libraries(cuda cudart cudadevrt)
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
target_link_libraries(${PROJECT_NAME} cuda)
